--- a/centralizedTaskArithmetic.ipynb
+++ b/centralizedTaskArithmetic.ipynb
@@ -9,7 +9,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9b744f14",
-        "outputId": "a31bea6c-f12b-426c-9640-33f951d53c1d"
+        "outputId": "912fb2bd-91cb-4e48-ff0a-9215826e0620"
       },
       "outputs": [
         {
@@ -33,137 +33,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "id": "7c7f7c12",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 110
         },
         "id": "7c7f7c12",
-        "outputId": "a912a3d4-8a21-4062-cd71-34af04e5ef86"
+        "outputId": "c1b46b0c-5671-4ff4-cb09-4983cba486ba"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "==================================================\n",
-            "实验开始: Sparsity Ratio = 0.05\n",
-            "\n",
-            "--- 阶段 1: 掩码校准 (Sparsity: 0.05, Batches: 10) ---\n",
-            "Calculating sensitivity over 10 batches...\n",
-            "掩码校准完成。可更新参数占比: 5.00%\n",
-            "\n",
-            "--- 阶段 2: 稀疏微调 ---\n",
-            "Epoch 1/30 | Loss: 12.2153 | Test Acc: 6.57%\n",
-            "Epoch 2/30 | Loss: 11.2057 | Test Acc: 7.51%\n",
-            "Epoch 3/30 | Loss: 10.9074 | Test Acc: 8.04%\n",
-            "Epoch 4/30 | Loss: 10.7073 | Test Acc: 8.60%\n",
-            "Epoch 5/30 | Loss: 10.5432 | Test Acc: 4.30%\n",
-            "Epoch 6/30 | Loss: 10.4463 | Test Acc: 8.97%\n",
-            "Epoch 7/30 | Loss: 10.2934 | Test Acc: 8.85%\n",
-            "Epoch 8/30 | Loss: 10.1778 | Test Acc: 8.93%\n",
-            "Epoch 9/30 | Loss: 10.0765 | Test Acc: 9.62%\n",
-            "Epoch 10/30 | Loss: 9.9828 | Test Acc: 9.33%\n",
-            "Epoch 11/30 | Loss: 9.8866 | Test Acc: 9.43%\n",
-            "Epoch 12/30 | Loss: 9.7988 | Test Acc: 9.89%\n",
-            "Epoch 13/30 | Loss: 9.7182 | Test Acc: 9.68%\n",
-            "Epoch 14/30 | Loss: 9.6304 | Test Acc: 9.48%\n",
-            "Epoch 15/30 | Loss: 9.5559 | Test Acc: 9.75%\n",
-            "Epoch 16/30 | Loss: 9.4750 | Test Acc: 9.60%\n",
-            "Epoch 17/30 | Loss: 9.4022 | Test Acc: 9.80%\n",
-            "Epoch 18/30 | Loss: 9.3282 | Test Acc: 9.58%\n",
-            "Epoch 19/30 | Loss: 9.2572 | Test Acc: 9.68%\n",
-            "Epoch 20/30 | Loss: 9.1965 | Test Acc: 9.94%\n",
-            "Epoch 21/30 | Loss: 9.1182 | Test Acc: 9.89%\n",
-            "Epoch 22/30 | Loss: 9.0520 | Test Acc: 9.75%\n",
-            "Epoch 23/30 | Loss: 8.9894 | Test Acc: 9.89%\n",
-            "Epoch 24/30 | Loss: 8.9266 | Test Acc: 9.85%\n",
-            "Epoch 25/30 | Loss: 8.8664 | Test Acc: 10.12%\n",
-            "Epoch 26/30 | Loss: 8.7986 | Test Acc: 10.03%\n",
-            "Epoch 27/30 | Loss: 8.7427 | Test Acc: 10.38%\n",
-            "Epoch 28/30 | Loss: 8.6790 | Test Acc: 10.26%\n",
-            "Epoch 29/30 | Loss: 8.6158 | Test Acc: 9.94%\n",
-            "Epoch 30/30 | Loss: 8.5654 | Test Acc: 9.96%\n",
-            "\n",
-            "==================================================\n",
-            "实验开始: Sparsity Ratio = 0.1\n",
-            "\n",
-            "--- 阶段 1: 掩码校准 (Sparsity: 0.1, Batches: 10) ---\n",
-            "Calculating sensitivity over 10 batches...\n",
-            "掩码校准完成。可更新参数占比: 10.00%\n",
-            "\n",
-            "--- 阶段 2: 稀疏微调 ---\n",
-            "Epoch 1/30 | Loss: 11.6113 | Test Acc: 11.26%\n",
-            "Epoch 2/30 | Loss: 10.1393 | Test Acc: 13.26%\n",
-            "Epoch 3/30 | Loss: 9.7393 | Test Acc: 14.23%\n",
-            "Epoch 4/30 | Loss: 9.5054 | Test Acc: 14.06%\n",
-            "Epoch 5/30 | Loss: 9.3193 | Test Acc: 15.11%\n",
-            "Epoch 6/30 | Loss: 9.1743 | Test Acc: 14.99%\n",
-            "Epoch 7/30 | Loss: 9.0478 | Test Acc: 15.47%\n",
-            "Epoch 8/30 | Loss: 8.9295 | Test Acc: 15.74%\n",
-            "Epoch 9/30 | Loss: 8.8288 | Test Acc: 15.81%\n",
-            "Epoch 10/30 | Loss: 8.7286 | Test Acc: 15.58%\n",
-            "Epoch 11/30 | Loss: 8.6349 | Test Acc: 15.83%\n",
-            "Epoch 12/30 | Loss: 8.5502 | Test Acc: 15.71%\n",
-            "Epoch 13/30 | Loss: 8.4644 | Test Acc: 16.27%\n",
-            "Epoch 14/30 | Loss: 8.3785 | Test Acc: 16.57%\n",
-            "Epoch 15/30 | Loss: 8.2969 | Test Acc: 15.76%\n",
-            "Epoch 16/30 | Loss: 8.2288 | Test Acc: 16.27%\n",
-            "Epoch 17/30 | Loss: 8.1533 | Test Acc: 16.39%\n",
-            "Epoch 18/30 | Loss: 8.0842 | Test Acc: 16.10%\n",
-            "Epoch 19/30 | Loss: 8.0099 | Test Acc: 16.46%\n",
-            "Epoch 20/30 | Loss: 7.9450 | Test Acc: 16.15%\n",
-            "Epoch 21/30 | Loss: 7.8763 | Test Acc: 15.10%\n",
-            "Epoch 22/30 | Loss: 7.8183 | Test Acc: 16.66%\n",
-            "Epoch 23/30 | Loss: 7.7484 | Test Acc: 16.61%\n",
-            "Epoch 24/30 | Loss: 7.6939 | Test Acc: 16.43%\n",
-            "Epoch 25/30 | Loss: 7.6343 | Test Acc: 16.21%\n",
-            "Epoch 26/30 | Loss: 7.5724 | Test Acc: 16.29%\n",
-            "Epoch 27/30 | Loss: 7.5150 | Test Acc: 16.88%\n",
-            "Epoch 28/30 | Loss: 7.4539 | Test Acc: 16.77%\n",
-            "Epoch 29/30 | Loss: 7.3969 | Test Acc: 16.54%\n",
-            "Epoch 30/30 | Loss: 7.3489 | Test Acc: 16.69%\n",
-            "\n",
-            "==================================================\n",
-            "实验开始: Sparsity Ratio = 0.2\n",
-            "\n",
-            "--- 阶段 1: 掩码校准 (Sparsity: 0.2, Batches: 10) ---\n",
-            "Calculating sensitivity over 10 batches...\n",
-            "掩码校准完成。可更新参数占比: 20.00%\n",
-            "\n",
-            "--- 阶段 2: 稀疏微调 ---\n",
-            "Epoch 1/30 | Loss: 7.9531 | Test Acc: 26.21%\n",
-            "Epoch 2/30 | Loss: 6.2789 | Test Acc: 29.00%\n",
-            "Epoch 3/30 | Loss: 5.9694 | Test Acc: 30.48%\n",
-            "Epoch 4/30 | Loss: 5.8043 | Test Acc: 31.26%\n",
-            "Epoch 5/30 | Loss: 5.6893 | Test Acc: 31.73%\n",
-            "Epoch 6/30 | Loss: 5.6057 | Test Acc: 32.13%\n",
-            "Epoch 7/30 | Loss: 5.5331 | Test Acc: 32.37%\n",
-            "Epoch 8/30 | Loss: 5.4599 | Test Acc: 32.58%\n",
-            "Epoch 9/30 | Loss: 5.4034 | Test Acc: 32.26%\n",
-            "Epoch 10/30 | Loss: 5.3547 | Test Acc: 33.29%\n",
-            "Epoch 11/30 | Loss: 5.3047 | Test Acc: 32.09%\n",
-            "Epoch 12/30 | Loss: 5.2634 | Test Acc: 33.24%\n",
-            "Epoch 13/30 | Loss: 5.2104 | Test Acc: 29.40%\n",
-            "Epoch 14/30 | Loss: 5.1752 | Test Acc: 33.28%\n",
-            "Epoch 15/30 | Loss: 5.1322 | Test Acc: 33.21%\n",
-            "Epoch 16/30 | Loss: 5.0898 | Test Acc: 33.45%\n",
-            "Epoch 17/30 | Loss: 5.0541 | Test Acc: 33.70%\n",
-            "Epoch 18/30 | Loss: 5.0169 | Test Acc: 33.12%\n",
-            "Epoch 19/30 | Loss: 4.9825 | Test Acc: 33.74%\n",
-            "Epoch 20/30 | Loss: 4.9430 | Test Acc: 33.85%\n",
-            "Epoch 21/30 | Loss: 4.9070 | Test Acc: 34.20%\n",
-            "Epoch 22/30 | Loss: 4.8816 | Test Acc: 33.30%\n",
-            "Epoch 23/30 | Loss: 4.8456 | Test Acc: 34.21%\n",
-            "Epoch 24/30 | Loss: 4.8116 | Test Acc: 33.95%\n",
-            "Epoch 25/30 | Loss: 4.7813 | Test Acc: 34.08%\n",
-            "Epoch 26/30 | Loss: 4.7473 | Test Acc: 33.07%\n",
-            "Epoch 27/30 | Loss: 4.7180 | Test Acc: 34.17%\n",
-            "Epoch 28/30 | Loss: 4.6843 | Test Acc: 34.00%\n",
-            "Epoch 29/30 | Loss: 4.6515 | Test Acc: 34.62%\n",
-            "Epoch 30/30 | Loss: 4.6265 | Test Acc: 33.95%\n"
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid character '，' (U+FF0C) (ipython-input-469728460.py, line 110)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-469728460.py\"\u001b[0;36m, line \u001b[0;32m110\u001b[0m\n\u001b[0;31m    ratios = [0.05, 0.1, 0.2，0.5]\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character '，' (U+FF0C)\n"
           ]
         }
       ],
@@ -277,7 +163,7 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "    # 项目建议实验不同的稀疏比例 [cite: 72]\n",
-        "    ratios = [0.05, 0.1, 0.2，0.5]\n",
+        "    ratios = [0.5, 0.7]\n",
         "    for r in ratios:\n",
         "        print(f\"\\n{'='*50}\")\n",
         "        print(f\"实验开始: Sparsity Ratio = {r}\")\n",
