--- a/fed_iid_taskArithmetic.ipynb
+++ b/fed_iid_taskArithmetic.ipynb
@@ -1,193 +1,277 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47c918b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# mount Google Drive\n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
-    "\n",
-    "# import module\n",
-    "import sys\n",
-    "sys.path.append('/content/drive/MyDrive')\n",
-    "from preprocessing import FederatedDataBuilder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69aac5f0",
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing fed_iid_taskArithmetic.py\n"
-     ]
+      "cell_type": "code",
+      "execution_count": 1,
+      "id": "47c918b0",
+      "metadata": {
+        "id": "47c918b0",
+        "outputId": "c8711952-371d-4ee3-ba57-a479672dc884",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
+      "source": [
+        "# mount Google Drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# import module\n",
+        "import sys\n",
+        "sys.path.append('/content/drive/MyDrive')\n",
+        "from preprocessing import FederatedDataBuilder"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "69aac5f0",
+      "metadata": {
+        "id": "69aac5f0",
+        "outputId": "55da3f50-8e75-42e1-b89d-c55003a1dead",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 169M/169M [00:13<00:00, 12.3MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Creating IID partition for 100 clients...\n",
+            "Downloading/Loading DINO ViT-S/16...\n",
+            "Downloading: \"https://github.com/facebookresearch/dino/zipball/main\" to /root/.cache/torch/hub/main.zip\n",
+            "Downloading: \"https://dl.fbaipublicfiles.com/dino/dino_deitsmall16_pretrain/dino_deitsmall16_pretrain.pth\" to /root/.cache/torch/hub/checkpoints/dino_deitsmall16_pretrain.pth\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 82.7M/82.7M [00:00<00:00, 236MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "--- Round 1/20 (Sparsity: 0.1) ---\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Round 1 Global Test Acc: 1.25%\n",
+            "\n",
+            "--- Round 2/20 (Sparsity: 0.1) ---\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Round 2 Global Test Acc: 1.31%\n",
+            "\n",
+            "--- Round 3/20 (Sparsity: 0.1) ---\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n",
+            "Calculating sensitivity over 15 batches...\n"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import copy\n",
+        "from torch.utils.data import DataLoader, Subset\n",
+        "from preprocessing import FederatedDataBuilder\n",
+        "from taskarithmetic import SparseSGDM, compute_fisher_sensitivity, calibrate_masks\n",
+        "from fed_avg_iid import DINOCIFAR100, fed_avg_aggregate # 复用你之前的模型和聚合函数\n",
+        "\n",
+        "# ============================================================\n",
+        "# 1. 本地训练函数 (集成了 Task Arithmetic)\n",
+        "# ============================================================\n",
+        "def local_train_task_arithmetic(model, train_dataset, client_indices, device,\n",
+        "                                 sparsity_ratio=0.1, local_epochs=4):\n",
+        "    \"\"\"\n",
+        "    客户端本地训练：包含掩码校准和稀疏微调\n",
+        "    \"\"\"\n",
+        "    model.train()\n",
+        "    model.to(device)\n",
+        "\n",
+        "    # 准备本地数据\n",
+        "    local_sub = Subset(train_dataset, list(client_indices))\n",
+        "    local_loader = DataLoader(local_sub, batch_size=32, shuffle=True)\n",
+        "    criterion = nn.CrossEntropyLoss()\n",
+        "\n",
+        "    # --- 阶段 A: 掩码校准 (Mask Calibration) ---\n",
+        "    # 根据项目要求：识别最不敏感 (least-sensitive) 的参数\n",
+        "    # 使用一轮 (num_batches=len(local_loader)) 即可代表本地数据的敏感度\n",
+        "    sensitivity_scores = compute_fisher_sensitivity(\n",
+        "        model, local_loader, criterion, device, num_batches=len(local_loader)\n",
+        "    )\n",
+        "\n",
+        "    masks = calibrate_masks(\n",
+        "        sensitivity_scores,\n",
+        "        sparsity_ratio=sparsity_ratio,\n",
+        "        keep_least_sensitive=True # 项目 3.3 要求\n",
+        "    )\n",
+        "\n",
+        "    # --- 阶段 B: 稀疏微调 (Sparse Fine-tuning) ---\n",
+        "    # 使用你实现的 SparseSGDM\n",
+        "    optimizer = SparseSGDM(\n",
+        "        model.parameters(),\n",
+        "        lr=0.01,\n",
+        "        momentum=0.9,\n",
+        "        masks=masks\n",
+        "    )\n",
+        "\n",
+        "    for epoch in range(local_epochs):\n",
+        "        for inputs, labels in local_loader:\n",
+        "            inputs, labels = inputs.to(device), labels.to(device)\n",
+        "            optimizer.zero_grad()\n",
+        "            outputs = model(inputs)\n",
+        "            loss = criterion(outputs, labels)\n",
+        "            loss.backward()\n",
+        "            optimizer.step() # 这里会自动应用掩码\n",
+        "\n",
+        "    return model.state_dict(), len(local_sub)\n",
+        "\n",
+        "# ============================================================\n",
+        "# 2. 主联邦训练循环\n",
+        "# ============================================================\n",
+        "def run_fed_iid_task_arithmetic(rounds=50, num_clients=100, sampling_rate=0.1, sparsity=0.1):\n",
+        "    DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "\n",
+        "    # 数据准备\n",
+        "    builder = FederatedDataBuilder(K=num_clients)\n",
+        "    # 获取 IID 划分\n",
+        "    dict_users = builder.get_iid_partition()\n",
+        "    test_loader = DataLoader(builder.test_dataset, batch_size=128, shuffle=False)\n",
+        "\n",
+        "    # 初始化全局模型\n",
+        "    global_model = DINOCIFAR100(num_classes=100).to(DEVICE)\n",
+        "\n",
+        "    history = {\"accuracy\": [], \"loss\": []}\n",
+        "\n",
+        "    for r in range(rounds):\n",
+        "        print(f\"\\n--- Round {r+1}/{rounds} (Sparsity: {sparsity}) ---\")\n",
+        "\n",
+        "        local_weights = []\n",
+        "        local_counts = []\n",
+        "\n",
+        "        # 随机选择客户端\n",
+        "        m = max(int(sampling_rate * num_clients), 1)\n",
+        "        selected_clients = np.random.choice(range(num_clients), m, replace=False)\n",
+        "\n",
+        "        for client_id in selected_clients:\n",
+        "            # 深拷贝全局模型到本地\n",
+        "            local_model = copy.deepcopy(global_model)\n",
+        "\n",
+        "            # 本地任务算术训练\n",
+        "            w, count = local_train_task_arithmetic(\n",
+        "                local_model,\n",
+        "                builder.train_dataset,\n",
+        "                dict_users[client_id],\n",
+        "                DEVICE,\n",
+        "                sparsity_ratio=sparsity\n",
+        "            )\n",
+        "\n",
+        "            local_weights.append(w)\n",
+        "            local_counts.append(count)\n",
+        "\n",
+        "        # 聚合 (FedAvg)\n",
+        "        global_weights = fed_avg_aggregate(global_model, local_weights, local_counts)\n",
+        "        global_model.load_state_dict(global_weights)\n",
+        "\n",
+        "        # 全局评估\n",
+        "        acc, loss = evaluate(global_model, test_loader, DEVICE)\n",
+        "        history[\"accuracy\"].append(acc)\n",
+        "        history[\"loss\"].append(loss)\n",
+        "        print(f\"Round {r+1} Global Test Acc: {acc:.2f}%\")\n",
+        "\n",
+        "    return history\n",
+        "\n",
+        "def evaluate(model, loader, device):\n",
+        "    model.eval()\n",
+        "    criterion = nn.CrossEntropyLoss()\n",
+        "    correct = 0\n",
+        "    total = 0\n",
+        "    total_loss = 0\n",
+        "    with torch.no_grad():\n",
+        "        for inputs, labels in loader:\n",
+        "            inputs, labels = inputs.to(device), labels.to(device)\n",
+        "            outputs = model(inputs)\n",
+        "            loss = criterion(outputs, labels)\n",
+        "            total_loss += loss.item()\n",
+        "            _, predicted = torch.max(outputs.data, 1)\n",
+        "            total += labels.size(0)\n",
+        "            correct += (predicted == labels).sum().item()\n",
+        "    return 100 * correct / total, total_loss / len(loader)\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    import numpy as np\n",
+        "    # 运行实验\n",
+        "    run_fed_iid_task_arithmetic(rounds=20, sparsity=0.1)"
+      ]
     }
-   ],
-   "source": [
-    "%%writefile fed_iid_taskArithmetic.py\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import copy\n",
-    "from torch.utils.data import DataLoader, Subset\n",
-    "from preprocessing import FederatedDataBuilder\n",
-    "from taskarithmetic import SparseSGDM, compute_fisher_sensitivity, calibrate_masks\n",
-    "from fed_avg_iid import DINOCIFAR100Fixed, fed_avg_aggregate # 复用你之前的模型和聚合函数\n",
-    "\n",
-    "# ============================================================\n",
-    "# 1. 本地训练函数 (集成了 Task Arithmetic)\n",
-    "# ============================================================\n",
-    "def local_train_task_arithmetic(model, train_dataset, client_indices, device, \n",
-    "                                 sparsity_ratio=0.1, local_epochs=4):\n",
-    "    \"\"\"\n",
-    "    客户端本地训练：包含掩码校准和稀疏微调\n",
-    "    \"\"\"\n",
-    "    model.train()\n",
-    "    model.to(device)\n",
-    "    \n",
-    "    # 准备本地数据\n",
-    "    local_sub = Subset(train_dataset, list(client_indices))\n",
-    "    local_loader = DataLoader(local_sub, batch_size=32, shuffle=True)\n",
-    "    criterion = nn.CrossEntropyLoss()\n",
-    "\n",
-    "    # --- 阶段 A: 掩码校准 (Mask Calibration) ---\n",
-    "    # 根据项目要求：识别最不敏感 (least-sensitive) 的参数\n",
-    "    # 使用一轮 (num_batches=len(local_loader)) 即可代表本地数据的敏感度\n",
-    "    sensitivity_scores = compute_fisher_sensitivity(\n",
-    "        model, local_loader, criterion, device, num_batches=len(local_loader)\n",
-    "    )\n",
-    "    \n",
-    "    masks = calibrate_masks(\n",
-    "        sensitivity_scores, \n",
-    "        sparsity_ratio=sparsity_ratio, \n",
-    "        keep_least_sensitive=True # 项目 3.3 要求\n",
-    "    )\n",
-    "\n",
-    "    # --- 阶段 B: 稀疏微调 (Sparse Fine-tuning) ---\n",
-    "    # 使用你实现的 SparseSGDM\n",
-    "    optimizer = SparseSGDM(\n",
-    "        model.parameters(), \n",
-    "        lr=0.01, \n",
-    "        momentum=0.9, \n",
-    "        masks=masks\n",
-    "    )\n",
-    "\n",
-    "    for epoch in range(local_epochs):\n",
-    "        for inputs, labels in local_loader:\n",
-    "            inputs, labels = inputs.to(device), labels.to(device)\n",
-    "            optimizer.zero_grad()\n",
-    "            outputs = model(inputs)\n",
-    "            loss = criterion(outputs, labels)\n",
-    "            loss.backward()\n",
-    "            optimizer.step() # 这里会自动应用掩码\n",
-    "\n",
-    "    return model.state_dict(), len(local_sub)\n",
-    "\n",
-    "# ============================================================\n",
-    "# 2. 主联邦训练循环\n",
-    "# ============================================================\n",
-    "def run_fed_iid_task_arithmetic(rounds=50, num_clients=100, sampling_rate=0.1, sparsity=0.1):\n",
-    "    DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "    \n",
-    "    # 数据准备\n",
-    "    builder = FederatedDataBuilder(K=num_clients)\n",
-    "    # 获取 IID 划分\n",
-    "    dict_users = builder.get_iid_partition() \n",
-    "    test_loader = DataLoader(builder.test_dataset, batch_size=128, shuffle=False)\n",
-    "\n",
-    "    # 初始化全局模型\n",
-    "    global_model = DINOCIFAR100Fixed(num_classes=100).to(DEVICE)\n",
-    "    \n",
-    "    history = {\"accuracy\": [], \"loss\": []}\n",
-    "\n",
-    "    for r in range(rounds):\n",
-    "        print(f\"\\n--- Round {r+1}/{rounds} (Sparsity: {sparsity}) ---\")\n",
-    "        \n",
-    "        local_weights = []\n",
-    "        local_counts = []\n",
-    "        \n",
-    "        # 随机选择客户端\n",
-    "        m = max(int(sampling_rate * num_clients), 1)\n",
-    "        selected_clients = np.random.choice(range(num_clients), m, replace=False)\n",
-    "\n",
-    "        for client_id in selected_clients:\n",
-    "            # 深拷贝全局模型到本地\n",
-    "            local_model = copy.deepcopy(global_model)\n",
-    "            \n",
-    "            # 本地任务算术训练\n",
-    "            w, count = local_train_task_arithmetic(\n",
-    "                local_model, \n",
-    "                builder.train_dataset, \n",
-    "                dict_users[client_id], \n",
-    "                DEVICE,\n",
-    "                sparsity_ratio=sparsity\n",
-    "            )\n",
-    "            \n",
-    "            local_weights.append(w)\n",
-    "            local_counts.append(count)\n",
-    "\n",
-    "        # 聚合 (FedAvg)\n",
-    "        global_weights = fed_avg_aggregate(global_model, local_weights, local_counts)\n",
-    "        global_model.load_state_dict(global_weights)\n",
-    "\n",
-    "        # 全局评估\n",
-    "        acc, loss = evaluate(global_model, test_loader, DEVICE)\n",
-    "        history[\"accuracy\"].append(acc)\n",
-    "        history[\"loss\"].append(loss)\n",
-    "        print(f\"Round {r+1} Global Test Acc: {acc:.2f}%\")\n",
-    "\n",
-    "    return history\n",
-    "\n",
-    "def evaluate(model, loader, device):\n",
-    "    model.eval()\n",
-    "    criterion = nn.CrossEntropyLoss()\n",
-    "    correct = 0\n",
-    "    total = 0\n",
-    "    total_loss = 0\n",
-    "    with torch.no_grad():\n",
-    "        for inputs, labels in loader:\n",
-    "            inputs, labels = inputs.to(device), labels.to(device)\n",
-    "            outputs = model(inputs)\n",
-    "            loss = criterion(outputs, labels)\n",
-    "            total_loss += loss.item()\n",
-    "            _, predicted = torch.max(outputs.data, 1)\n",
-    "            total += labels.size(0)\n",
-    "            correct += (predicted == labels).sum().item()\n",
-    "    return 100 * correct / total, total_loss / len(loader)\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    import numpy as np\n",
-    "    # 运行实验\n",
-    "    run_fed_iid_task_arithmetic(rounds=20, sparsity=0.1)"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "AdvancedMachingLearning",
-   "language": "python",
-   "name": "python3"
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.21"
+    },
+    "colab": {
+      "provenance": [],
+      "gpuType": "T4"
+    },
+    "accelerator": "GPU"
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.21"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
